# Camera-Filtering

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/camera_functions/: camera_functions.cpp  camera_functions.hpp
src/filtering/: rgb_filter.cpp  rgb_filter.hpp
